Made Character implement comparable to sort lists of characters by initiative roll. The Combat class handles ordering of characters, tracking rounds, and updating character status effects.

--- a/app/src/main/res/layout/activity_tracker.xml
+++ b/app/src/main/res/layout/activity_tracker.xml
@@ -11,8 +11,7 @@
         android:layout_height="150dp"
         android:id="@+id/CurrentCharCard"
         android:elevation="3dp"
-        android:longClickable="true"
-        style="@android:style/Theme.Material.Light">
+        android:longClickable="true">
 
         <TextView
             android:layout_width="wrap_content"
