--- a/app/src/main/res/layout/activity_initiative_tracker.xml
+++ b/app/src/main/res/layout/activity_initiative_tracker.xml
@@ -17,13 +17,14 @@
             android:id="@+id/currentCharacterCard"
             android:layout_gravity="center_horizontal"
             android:elevation="3dp"
-            android:paddingTop="0dp">
+            android:paddingTop="0dp"
+            android:longClickable="true">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
-                android:id="@+id/textView"
+                android:id="@+id/initiativeNumber"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -33,14 +34,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Current Character"
-                android:id="@+id/textView2"
+                android:id="@+id/currentCharacterName"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:paddingTop="3dp"
+                android:textSize="@dimen/abc_text_size_title_material"
+                android:textStyle="bold" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imageButton"
+                android:id="@+id/editStatusButton"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
